--- a/introducao.html
+++ b/introducao.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     
+    <script>
+
+        setTimeout(function() {
+            console.log("timeout depois de 2000")
+        },2000)
+    </script>
 </body>
 </html>
