acrecentei mais coisas em meu código.

--- a/introducao.html
+++ b/introducao.html
@@ -8,10 +8,15 @@
 <body>
     
     <script>
-
+        
         setTimeout(function() {
             console.log("timeout depois de 2000")
         },2000)
+
+        setInterval(function(){
+            console.log()
+        },1000)
+
     </script>
 </body>
 
