acrecentei mais esta parte  let n = 0 em meu código .

--- a/introducao.html
+++ b/introducao.html
@@ -8,7 +8,7 @@
 <body>
     
     <script>
-
+        let n = 0
         setTimeout(function() {
             console.log("timeout depois de 2000")
         },2000)
