--- a/introducao.html
+++ b/introducao.html
@@ -14,7 +14,7 @@
         },2000)
 
         setInterval(function(){
-            console.log()
+            console.log("interval")
         },1000)
     </script>
 </body>
