acrecentei mais uma etapa.

--- a/introducao.html
+++ b/introducao.html
@@ -14,7 +14,7 @@
         },2000)
 
         setInterval(function(){
-            console.log("interval")
+            console.log("interval n:",n++)
         },1000)
     </script>
 </body>
