--- a/introducao.html
+++ b/introducao.html
@@ -10,12 +10,15 @@
     <script>
         let n = 0
         setTimeout(function() {
-            console.log("timeout depois de 2000")
-        },20)
+            console.log("timeout depois de 2000ms")
+        },2000)
 
-        setInterval(function(){
+        const intervalo =setInterval(function () {
             console.log("interval n:",n++)
-        },10)
+            if (n > 10) {
+             clearInterval(intervalo)
+            }
+        },1000)
     </script>
 </body>
 
