--- a/introducao.html
+++ b/introducao.html
@@ -10,25 +10,35 @@
     <div></div>
     
     <script>
-        let n = 0
-        setTimeout(function() {
-            console.log("timeout depois de 2000ms")
-        },2000)
+        // Inicializa a variável tempoinicio
+        const tempoinicio = Date.now();
 
-        let str =""
-        var d =document.querySelector("div")
-        for(let i =0; i < 1000;i++ ){
-        str += 'i: ${i}--'
-        d.textContent += str
+        let n = 0;
+
+        // Função para exibir o timeout após 2000ms
+        setTimeout(function() {
+            console.log("timeout depois de 2000ms");
+            const tempoFinal = Date.now();
+            console.log(tempoFinal - tempoinicio);
+        }, 2000);
+
+        let str = "";
+        var d = document.querySelector("div");
+
+        // Loop para adicionar texto à string str
+        for (let i = 0; i < 1000; i++) {
+            str += `i: ${i}--`; // Use crase (`) para interpolação de string
         }
-        
-        const intervalo =setInterval(function () {
-            console.log("interval n:",n++)
+
+        d.textContent += str; // Adiciona o texto à div
+
+        // Define o intervalo para imprimir a contagem a cada segundo
+        const intervalo = setInterval(function () {
+            console.log("interval n:", n++);
             if (n >= 10) {
-             clearInterval(intervalo)
+                clearInterval(intervalo);
             }
-        },1000)
+        }, 1000);
     </script>
 </body>
-
-</html> 
+</html>
